Fix jumping of works blocks

--- a/assets/css/works.css
+++ b/assets/css/works.css
@@ -125,12 +125,14 @@
     top: 199px;
     left: 0px;
     width: 100%;
-    height: 100%;
+    height: 81px;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .listWork .overlayinfo.active {
     top: 0px;
+    height: 100%;
 }
 
 .listWork .overlayinfo h4 {
